<resources>
    <string name="app_name">Portofolio_Catchy_Travel_App</string>
    <string name="txt_splash_screen">Nature Travel</string>
    <string name="txt_header_profiler">Who are you?</string>
    <string name="txt_desc_profiler">Let us know who you are, so we can adjust the best travel recommendation for you!</string>
    <string name="txt_ever_sign_in_before">Have you ever sign in before?</string>
    <string name="txt_btn_sign_in_google">Sign in with Google</string>
    <string name="txt_btn_sign_in_facebook">Sign in with Facebook</string>
    <string name="txt_divider_profiler">OR</string>
    <string name="txt_header_manual_sign_in">Manual Sign In</string>
    <string name="txt_place_holder_email_sign_in">Email</string>
    <string name="txt_place_holder_password_sign_in">Password</string>
    <string name="txt_place_holder_show_password_sign_in">Show password</string>
    <string name="txt_btn_sign_in">Sign In</string>
    <string name="txt_copy_right">copyright 2022 by Rakha Rozaqtama</string>
</resources>