<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_color"
    tools:context=".ProfilerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/profiler_header"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@drawable/profiler_header">
            <TextView
                android:id="@+id/txt_title_profiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_header_profiler"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_desc_profiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc_profiler"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="13sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profiler_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profiler_header"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/tv_ever_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ever_sign_in_before"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="15dp">
                <RelativeLayout
                    android:id="@+id/container_btn_sign_in_google"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_auto_sign_in">
                    <ImageView
                        android:id="@+id/img_sign_google"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/google_icon"
                        android:layout_centerVertical="true"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txt_sign_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/img_sign_google"
                        android:text="@string/txt_btn_sign_in_google"
                        android:textColor="@color/black" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/container_btn_sign_in_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_auto_sign_in">
                    <ImageView
                        android:id="@+id/img_sign_facebook"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/facebook_icon"
                        android:layout_centerVertical="true"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txt_sign_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/img_sign_facebook"
                        android:text="@string/txt_btn_sign_in_facebook"
                        android:textColor="@color/black" />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_gravity="center"
                android:gravity="center">
                <View
                    android:id="@+id/div_left"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:background="@color/dark_color"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/txt_div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_divider_profiler"
                    android:textColor="@color/dark_color"
                    android:layout_toEndOf="@+id/div_left"
                    android:layout_marginStart="10dp"/>
                <View
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_toEndOf="@+id/txt_div"
                    android:background="@color/dark_color"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="40dp">
                <TextView
                    android:id="@+id/txt_header_manual_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_header_manual_sign_in"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"/>
                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_edit_text_sign_in"
                    android:hint="@string/txt_place_holder_email_sign_in"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_color"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />
                <EditText
                    android:id="@+id/input_password"
                    android:layout_marginTop="15dp"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_edit_text_sign_in"
                    android:hint="@string/txt_place_holder_password_sign_in"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_color"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <CheckBox
                        android:id="@+id/show_password"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/txt_place_holder_show_password_sign_in"
                        android:textColor="@color/dark_color"
                        android:buttonTint="@color/dark_color"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:text="@string/txt_btn_sign_in"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txt_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_copy_right"
                android:textSize="12sp"
                android:textColor="@color/dark_color"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>